--- a/SimpleEA.cabal
+++ b/SimpleEA.cabal
@@ -17,7 +17,7 @@ cabal-version:       >=1.6
 
 
 Library
-    build-depends:      base >=4 && < 5, MonadRandom
+    build-depends:      base >=4 && < 5, MonadRandom, mersenne-random-pure64 >= 0.2 && < 0.3
     ghc-options:        -Wall -fno-warn-name-shadowing -fno-warn-orphans
     exposed-modules:    AI.SimpleEA, AI.SimpleEA.Utils
 
