--- a/SimpleEA.cabal
+++ b/SimpleEA.cabal
@@ -1,7 +1,7 @@
 name:               SimpleEA
-category:			AI
+category:           AI
 build-type:         Simple
-version:            0.1.1
+version:            0.2
 synopsis:           Simple evolutionary algorithm framework.
 description:        Simple framework for running an evolutionary algorithm by
                     providing selection, recombination, and mutation operators.
@@ -11,15 +11,17 @@ category:           AI
 author:             Erlend Hamberg
 maintainer:         ehamberg@gmail.com
 stability:          experimental
-tested-with:        GHC==7.0.1
+tested-with:        GHC==7.4.1
 homepage:           http://www.github.com/ehamberg/simpleea/
 cabal-version:       >=1.6
 
 
 Library
-    build-depends:      base >=4 && < 5, MonadRandom, mersenne-random-pure64 >= 0.2 && < 0.3
-    ghc-options:        -Wall -fno-warn-name-shadowing -fno-warn-orphans
-    exposed-modules:    AI.SimpleEA, AI.SimpleEA.Utils
+    build-depends:   base >=4 && < 5,
+                     MonadRandom,
+                     mersenne-random-pure64 >= 0.2 && < 0.3
+    ghc-options:     -Wall -fno-warn-name-shadowing -fno-warn-orphans
+    exposed-modules: AI.SimpleEA, AI.SimpleEA.Utils
 
 source-repository head
   type:     git
